--- a/servicio-items-produccion.properties
+++ b/servicio-items-produccion.properties
@@ -1,2 +1,9 @@
 # Uno distinto
 server.port=8008
+spring.datasource.url=jdbc:mysql8:3306/bdlibros?serverTimezone=Europe/Madrid&allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=create
+logging.level.org.hibernate.SQL=debug
