--- a/servicio-libros-produccion.properties
+++ b/servicio-libros-produccion.properties
@@ -1,5 +1,5 @@
 # Uno distinto
-spring.datasource.url=jdbc:mysql8:3306/bdlibros?serverTimezone=Europe/Madrid&allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql8:3306/dblibros?serverTimezone=Europe/Madrid&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
